--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,11 +19,23 @@ steps:
     sudo apt-get install -y openjdk-11-jdk
   displayName: 'Install Java 11'
 
-# Install Android SDK components
+# Download & Install Android SDK Command-line Tools
 - script: |
-    yes | sdkmanager "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+    mkdir -p $HOME/android-sdk/cmdline-tools
+    cd $HOME/android-sdk/cmdline-tools
+    curl -O https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+    unzip commandlinetools-linux-9477386_latest.zip -d latest
+    export ANDROID_HOME=$HOME/android-sdk
+    export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+    yes | sdkmanager --sdk_root=$ANDROID_HOME "platform-tools" "platforms;android-30" "build-tools;30.0.3"
   displayName: 'Install Android SDK'
 
+# Set Android environment variables globally
+- script: |
+    echo "##vso[task.setvariable variable=ANDROID_HOME]$HOME/android-sdk"
+    echo "##vso[task.setvariable variable=PATH]$HOME/android-sdk/platform-tools:$PATH"
+  displayName: 'Set Android SDK Environment Vars'
+  
 # Make gradlew executable
 - script: chmod +x ./gradlew
   displayName: 'Make gradlew executable'
