--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,24 +14,24 @@ variables:
   buildToolsVersion: '30.0.3'
   androidHome: '$(HOME)/android-sdk'
 
-# steps:
-# # ✅ Install Java 11 manually
-# - script: |
-#     sudo apt-get update
-#     sudo apt-get install -y openjdk-11-jdk unzip curl
-#   displayName: 'Install Java and tools'
+steps:
+# ✅ Install Java 11 manually
+- script: |
+    sudo apt-get update
+    sudo apt-get install -y openjdk-11-jdk unzip curl
+  displayName: 'Install Java and tools'
 
-# - script: |
-#     mkdir -p $HOME/android-sdk/cmdline-tools
-#     cd $HOME/android-sdk/cmdline-tools
-#     curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
-#     unzip tools.zip
-#     mv cmdline-tools latest
-#     export ANDROID_HOME=$HOME/android-sdk
-#     export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
-#     yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME \
-#       "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-#   displayName: 'Install Android SDK components'
+- script: |
+    mkdir -p $HOME/android-sdk/cmdline-tools
+    cd $HOME/android-sdk/cmdline-tools
+    curl -o tools.zip https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip
+    unzip tools.zip
+    mv cmdline-tools latest
+    export ANDROID_HOME=$HOME/android-sdk
+    export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
+    yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME \
+      "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+  displayName: 'Install Android SDK components'
 
 
 # ✅ Set Android SDK env vars globally
