--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,17 +44,26 @@ steps:
 - script: chmod +x ./gradlew
   displayName: 'Make gradlew executable'
 
-# ✅ Build APK
-- task: Gradle@2
+# # ✅ Build APK
+# - task: Gradle@2
+#   inputs:
+#     gradleWrapperFile: './gradlew'
+#     tasks: 'assembleDebug'
+#     options: '--stacktrace --info --warning-mode all'
+    
+- task: Gradle@3
   inputs:
-    gradleWrapperFile: './gradlew'
+    workingDirectory: ''
+    gradleWrapperFile: 'gradlew'
+    gradleOptions: '-Xmx3072m'
+    publishJUnitResults: false
+    testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
-    options: '--stacktrace --info --warning-mode all'
 
 # ✅ Run Espresso UI Tests
-- task: Gradle@2
+- task: Gradle@3
   inputs:
-    gradleWrapperFile: './gradlew'
+    gradleWrapperFile: 'gradlew'
     tasks: 'connectedDebugAndroidTest'
     options: '--stacktrace'
     publishJUnitResults: true
