--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,13 +15,17 @@ variables:
   androidHome: '$(HOME)/android-sdk'
 
 steps:
-# ✅ Install Java 17 manually (revised from Java 11)
 - script: |
     sudo apt-get update
     sudo apt-get install -y openjdk-17-jdk unzip curl
-  displayName: 'Install Java 17 and tools'
+  displayName: 'Install Java 17'
 
-# ✅ Install Android SDK command-line tools
+- script: |
+    export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+    echo "##vso[task.setvariable variable=JAVA_HOME]/usr/lib/jvm/java-17-openjdk-amd64"
+    echo "##vso[task.setvariable variable=PATH]/usr/lib/jvm/java-17-openjdk-amd64/bin:$PATH"
+  displayName: 'Set JAVA_HOME to Java 17'
+
 - script: |
     mkdir -p $HOME/android-sdk/cmdline-tools
     cd $HOME/android-sdk/cmdline-tools
@@ -32,50 +36,36 @@ steps:
     export PATH=$ANDROID_HOME/cmdline-tools/latest/bin:$PATH
     yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_HOME \
       "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-  displayName: 'Install Android SDK components'
+  displayName: 'Install Android SDK'
 
-# ✅ Set Android SDK env vars globally
 - script: |
     echo "##vso[task.setvariable variable=ANDROID_HOME]$HOME/android-sdk"
     echo "##vso[task.setvariable variable=PATH]$HOME/android-sdk/platform-tools:$HOME/android-sdk/cmdline-tools/latest/bin:$PATH"
-  displayName: 'Set ANDROID_HOME and PATH'
+  displayName: 'Set ANDROID_HOME & PATH'
 
-# ✅ Make gradlew executable
 - script: chmod +x ./gradlew
   displayName: 'Make gradlew executable'
 
-# # ✅ Build APK
-# - task: Gradle@2
-#   inputs:
-#     gradleWrapperFile: './gradlew'
-#     tasks: 'assembleDebug'
-#     options: '--stacktrace --info --warning-mode all'
-    
-- task: Gradle@3
+- task: Gradle@2
   inputs:
-    workingDirectory: ''
     gradleWrapperFile: 'gradlew'
-    gradleOptions: '-Xmx3072m'
+    tasks: ':app:assembleDebug'
+    options: '--stacktrace --info --warning-mode all'
     publishJUnitResults: false
-    testResultsFiles: '**/TEST-*.xml'
-    tasks: 'assembleDebug'
 
-# ✅ Run Espresso UI Tests
-- task: Gradle@3
+- task: Gradle@2
   inputs:
     gradleWrapperFile: 'gradlew'
-    tasks: 'connectedDebugAndroidTest'
+    tasks: ':app:connectedDebugAndroidTest'
     options: '--stacktrace'
     publishJUnitResults: true
     testResultsFiles: '**/build/test-results/**/*.xml'
 
-# ✅ Copy APK to artifacts directory
 - task: CopyFiles@2
   inputs:
     contents: '**/*.apk'
     targetFolder: '$(Build.ArtifactStagingDirectory)'
 
-# ✅ Publish APK as artifact
 - task: PublishBuildArtifacts@1
   inputs:
     pathToPublish: '$(Build.ArtifactStagingDirectory)'
