--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
 - task: Cache@2
   inputs:
     key: 'gradle | "$(Agent.OS)" | **/gradle-wrapper.properties'
-    path: ~/.gradle
+    path: $(HOME)/.gradle
   displayName: 'Cache Gradle'
 
 # ✅ Build APK
