--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,7 +104,7 @@ steps:
 - task: DownloadSecureFile@1
   name: downloadFirebaseCreds
   inputs:
-    secureFile: 'service-account.json'
+    secureFile: 'bucketlistpipeline-firebase-adminsdk-fbsvc-adb8f51068.json'
 
 - script: |
     npm install -g firebase-tools
