--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -108,10 +108,11 @@ steps:
 
 - script: |
     npm install -g firebase-tools
+    export GOOGLE_APPLICATION_CREDENTIALS="$(Agent.TempDirectory)/$(downloadFirebaseCreds.secureFilePath)"
     firebase appdistribution:distribute $(Build.ArtifactStagingDirectory)/*.apk \
       --app "$(FIREBASE_APP_ID)" \
       --release-notes "CI/CD build deployed via Azure DevOps" \
       --testers "$(TESTER_EMAILS)" \
-      --token "$(FIREBASE_TOKEN)" \
-      --service-credentials "$(Agent.TempDirectory)/$(downloadFirebaseCreds.secureFilePath)"
+      --token "$(FIREBASE_TOKEN)"
   displayName: 'Distribute APK via Firebase'
+
